# AutoReview

./: .gitignore  README.md  config.example.yaml  package-lock.json  package.json  pyproject.toml  requirements.txt
apps/: __init__.py
apps/backend/: __init__.py
apps/backend/autoreview_backend/: __init__.py  main.py  worker.py
apps/desktop/: index.html  package.json  vite.config.ts
apps/desktop/electron/: main.cjs  preload.cjs
apps/desktop/src/: App.test.tsx  App.tsx  (+4 more)
docs/: ARCHITECTURE.md  FEATURE_MATRIX.md  MVP_STATUS.md  QUICK_START.md  REVIEW_PACKET.md  ROADMAP.md  RULE_AUTHORING.md  TRAINING_SETS.md  TROUBLESHOOTING.md  UI_QA_CHECKLIST.md
examples/: drawing_index.csv  equipment_list.csv  instrument_index.csv  line_list.csv  valve_list.csv
ng_drawing_qa/: annotations.py  cli.py  config.py  errors.py  issue_builder.py  models.py  pdf_utils.py  placement.py  reference.py  reports.py  review_packet.py  sample.py  schemas.py
ng_drawing_qa/integrations/: ai.py  bax.py  studio.py
ng_drawing_qa/rules/: __init__.py  base.py  core_rules.py  registry.py
ng_drawing_qa/services/: __init__.py  files.py  packet.py  profiles.py  projects.py  reference_mappings.py  review.py  training.py  validation.py
ng_drawing_qa/storage/: __init__.py  sqlite.py
ng_drawing_qa/tests/: test_config.py  test_normalization.py
scripts/: backend.ps1  build.ps1  dev.ps1  generate_sample.ps1  test.ps1
tests/: test_backend_api.py  test_cli_shared_workflow.py  test_false_positive_reduction.py  test_placement.py  test_project_services.py  test_reports.py  test_rule_metadata.py
