[project]
name = "bluebeam-ng-review-automation"
version = "0.3.0"
description = "Natural gas drawing set QA automation that creates Bluebeam-reviewable PDF markups and issue logs."
requires-python = ">=3.10"
dependencies = [
  "pymupdf>=1.24.0",
  "PyYAML>=6.0.1",
  "openpyxl>=3.1.2",
  "fastapi>=0.110.0",
  "uvicorn>=0.27.0",
  "pydantic>=2.6.0"
]

[project.scripts]
ng-drawing-qa = "ng_drawing_qa.cli:main"
autoreview-backend = "apps.backend.autoreview_backend.main:run"

[tool.pytest.ini_options]
testpaths = ["ng_drawing_qa/tests", "tests"]
